New product add
4. Park Avenue

--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">
-                                            The Moms Co. Shampoo</h4>
+                                        <h4 class="shirt_text">The Moms Co. Shampoo</h4>
                                         <p class="price_text">Price <span style="color: #262626;">₹ 99</span></p>
                                         <div class="tshirt_img"><img src="images/The Moms Co. Shampoo.png"></div>
                                         <div class="btn_main">
@@ -231,9 +230,9 @@
                             <div class="row">
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Coming Soon 1</h4>
-                                        <p class="price_text">Price <span style="color: #262626;">$ 0</span></p>
-                                        <div class="tshirt_img"><img src="images/ComingSoon.png"></div>
+                                        <h4 class="shirt_text">Park Avenue Original Deodorant Set For Men 150ml Each (Combo Of 3)</h4>
+                                        <p class="price_text">Price <span style="color: #262626;">₹ 399</span></p>
+                                        <div class="tshirt_img"><img src="images/PARKDEO.jpg"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
