--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="container">
-                        <h1 class="fashion_taital">Coming Soooooooon</h1>
+                        <h1 class="fashion_taital">Man & Woman Fashion</h1>
                         <div class="fashion_section_2">
                             <div class="row">
                                 <div class="col-lg-4 col-sm-4">
@@ -241,9 +241,9 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Cooming Soon 2</h4>
-                                        <p class="price_text">Price <span style="color: #262626;">$ 0</span></p>
-                                        <div class="tshirt_img"><img src="images/ComingSoon.png"></div>
+                                        <h4 class="shirt_text">Earth Rhythm Energising Water Gel Face Wash</h4>
+                                        <p class="price_text">Price <span style="color: #262626;">₹ 99</span></p>
+                                        <div class="tshirt_img"><img src="images/earthrhythm.jpg"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -252,9 +252,9 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Coming Soon 3</h4>
-                                        <p class="price_text">Price <span style="color: #262626;">$ 0</span></p>
-                                        <div class="tshirt_img"><img src="images/ComingSoon.png"></div>
+                                        <h4 class="shirt_text">Brillare Onion Hair Oil Shots with Bakuchiol & Coconut Hair Oil</h4>
+                                        <p class="price_text">Price <span style="color: #262626;">₹ 249</span></p>
+                                        <div class="tshirt_img"><img src="images/Brillareoil.jpg"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -267,14 +267,14 @@
                 </div>
                 <div class="carousel-item">
                     <div class="container">
-                        <h1 class="fashion_taital">Coming Soooooooon</h1>
+                        <h1 class="fashion_taital">Man & Woman Fashion</h1>
                         <div class="fashion_section_2">
                             <div class="row">
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Coming Soon 4</h4>
-                                        <p class="price_text">Price <span style="color: #262626;">$ 0</span></p>
-                                        <div class="tshirt_img"><img src="images/ComingSoon.png"></div>
+                                        <h4 class="shirt_text">HAPPIER Powerberry 15% Pure Vitamin C Face Serum</h4>
+                                        <p class="price_text">Price <span style="color: #262626;">₹ 99</span></p>
+                                        <div class="tshirt_img"><img src="images/HAPPIERSERUM.jpg"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -283,9 +283,9 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Coming Soon 5</h4>
-                                        <p class="price_text">Price <span style="color: #262626;">$ 0</span></p>
-                                        <div class="tshirt_img"><img src="images/ComingSoon.png"></div>
+                                        <h4 class="shirt_text">UPAKARMA Ayurveda 100% Ayurvedic, Original and Pure Shilajit</h4>
+                                        <p class="price_text">Price <span style="color: #262626;">₹ 399</span></p>
+                                        <div class="tshirt_img"><img src="images/UPAKARMA.jpg"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -294,9 +294,9 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Coming Soon 6</h4>
-                                        <p class="price_text">Price <span style="color: #262626;">$ 0</span></p>
-                                        <div class="tshirt_img"><img src="images/ComingSoon.png"></div>
+                                        <h4 class="shirt_text">Revlon Outrageous Color Protection Shampoo, 400ml</h4>
+                                        <p class="price_text">Price <span style="color: #262626;">₹ 199</span></p>
+                                        <div class="tshirt_img"><img src="images/REVLON.jpg"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -329,7 +329,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Laptop</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="electronic_img"><img src="images/laptop-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -340,7 +340,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Mobile</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="electronic_img"><img src="images/mobile-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -351,7 +351,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Computers</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="electronic_img"><img src="images/computer-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -371,7 +371,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Laptop</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="electronic_img"><img src="images/laptop-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -382,7 +382,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Mobile</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="electronic_img"><img src="images/mobile-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -393,7 +393,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Computers</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="electronic_img"><img src="images/computer-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -413,7 +413,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Laptop</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="electronic_img"><img src="images/laptop-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -424,7 +424,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Mobile</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="electronic_img"><img src="images/mobile-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -435,7 +435,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Computers</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="electronic_img"><img src="images/computer-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -469,7 +469,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Jumkas</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="jewellery_img"><img src="images/jhumka-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -480,7 +480,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Necklaces</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="jewellery_img"><img src="images/neklesh-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -491,7 +491,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Kangans</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="jewellery_img"><img src="images/kangan-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -511,7 +511,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Jumkas</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="jewellery_img"><img src="images/jhumka-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -522,7 +522,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Necklaces</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="jewellery_img"><img src="images/neklesh-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -533,7 +533,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Kangans</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="jewellery_img"><img src="images/kangan-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -553,7 +553,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Jumkas</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="jewellery_img"><img src="images/jhumka-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -564,7 +564,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Necklaces</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="jewellery_img"><img src="images/neklesh-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -575,7 +575,7 @@
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
                                         <h4 class="shirt_text">Kangans</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 100</span></p>
                                         <div class="jewellery_img"><img src="images/kangan-img.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
