--- a/fashion.html
+++ b/fashion.html
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="logo">
-                            <a href="index.html"><img src="images/logo.png"></a>
+                            <a href="index.html"><img src="images/aj.logo.png"></a>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                         <a href="index.html">Home</a>
                         <a href="fashion.html">Fashion</a>
                         <a href="electronic.html">Electronic</a>
-                        <a href="jewellery.html">Jewellery</a>
+                        <a href="jewellery.html">Everything</a>
                     </div>
                     <span class="toggle_icon" onclick="openNav()"><img src="images/toggle-icon.png"></span>
                     <div class="dropdown">
@@ -106,16 +106,6 @@
                         </div>
                     </div>
                     <div class="header_box">
-                        <div class="lang_box ">
-                            <a href="#" title="Language" class="nav-link" data-toggle="dropdown" aria-expanded="true">
-                                <img src="images/flag-uk.png" alt="flag" class="mr-2 " title="United Kingdom"> English <i class="fa fa-angle-down ml-2" aria-hidden="true"></i>
-                            </a>
-                            <div class="dropdown-menu ">
-                                <a href="#" class="dropdown-item">
-                                    <img src="images/flag-france.png" class="mr-2" alt="flag"> French
-                                </a>
-                            </div>
-                        </div>
                         <div class="login_menu">
                             <ul>
                                 <li>
@@ -143,24 +133,24 @@
                         <div class="carousel-item active">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                                    <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                                    <h1 class="banner_taital">Hey, lovely people,<br> this is Akshay.</h1>
+                                    <div class="buynow_bt"><a href="https://bit.ly/RitiekWhatsapp">Contect Us</a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                                    <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                                    <h1 class="banner_taital">Now Website,<br>Is live</h1>
+                                    <div class="buynow_bt"><a href="https://bit.ly/RitiekWhatsapp">Contect Us</a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                                    <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                                    <h1 class="banner_taital">Get Start <br>Your favourite shoping</h1>
+                                    <div class="buynow_bt"><a href="https://bit.ly/RitiekWhatsapp">Contect Us</a></div>
                                 </div>
                             </div>
                         </div>
