--- a/jewellery.html
+++ b/jewellery.html
@@ -106,16 +106,6 @@
                         </div>
                     </div>
                     <div class="header_box">
-                        <div class="lang_box ">
-                            <a href="#" title="Language" class="nav-link" data-toggle="dropdown" aria-expanded="true">
-                                <img src="images/flag-uk.png" alt="flag" class="mr-2 " title="United Kingdom"> English <i class="fa fa-angle-down ml-2" aria-hidden="true"></i>
-                            </a>
-                            <div class="dropdown-menu ">
-                                <a href="#" class="dropdown-item">
-                                    <img src="images/flag-france.png" class="mr-2" alt="flag"> French
-                                </a>
-                            </div>
-                        </div>
                         <div class="login_menu">
                             <ul>
                                 <li>
@@ -143,24 +133,24 @@
                         <div class="carousel-item active">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                                    <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                                    <h1 class="banner_taital">Hey, lovely people,<br> this is Akshay.</h1>
+                                    <div class="buynow_bt"><a href="https://bit.ly/RitiekWhatsapp">Contect Us</a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                                    <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                                    <h1 class="banner_taital">Now Website,<br>Is live</h1>
+                                    <div class="buynow_bt"><a href="https://bit.ly/RitiekWhatsapp">Contect Us</a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                                    <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                                    <h1 class="banner_taital">Get Start <br>Your favourite shoping</h1>
+                                    <div class="buynow_bt"><a href="https://bit.ly/RitiekWhatsapp">Contect Us</a></div>
                                 </div>
                             </div>
                         </div>
@@ -183,14 +173,14 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="container">
-                        <h1 class="fashion_taital">Jewellery Accessories</h1>
+                        <h1 class="fashion_taital">Everything</h1>
                         <div class="fashion_section_2">
                             <div class="row">
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Jumkas</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
-                                        <div class="jewellery_img"><img src="images/jhumka-img.png"></div>
+                                        <h4 class="shirt_text">Coooming Sooon 1</h4>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 0</span></p>
+                                        <div class="jewellery_img"><img src="images/ComingSoon.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -199,9 +189,9 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Necklaces</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
-                                        <div class="jewellery_img"><img src="images/neklesh-img.png"></div>
+                                        <h4 class="shirt_text">Coooming Sooon 2</h4>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 0</span></p>
+                                        <div class="jewellery_img"><img src="images/ComingSoon.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -210,9 +200,9 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Kangans</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
-                                        <div class="jewellery_img"><img src="images/kangan-img.png"></div>
+                                        <h4 class="shirt_text">Coooming Sooon 3</h4>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 0</span></p>
+                                        <div class="jewellery_img"><img src="images/ComingSoon.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -225,14 +215,14 @@
                 </div>
                 <div class="carousel-item">
                     <div class="container">
-                        <h1 class="fashion_taital">Jewellery Accessories</h1>
+                        <h1 class="fashion_taital">Everything</h1>
                         <div class="fashion_section_2">
                             <div class="row">
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Jumkas</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
-                                        <div class="jewellery_img"><img src="images/jhumka-img.png"></div>
+                                        <h4 class="shirt_text">Coooming Sooon 4</h4>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 0</span></p>
+                                        <div class="jewellery_img"><img src="images/ComingSoon.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -241,9 +231,9 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Necklaces</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
-                                        <div class="jewellery_img"><img src="images/neklesh-img.png"></div>
+                                        <h4 class="shirt_text">Coooming Sooon 5</h4>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 0</span></p>
+                                        <div class="jewellery_img"><img src="images/ComingSoon.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -252,9 +242,9 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Kangans</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
-                                        <div class="jewellery_img"><img src="images/kangan-img.png"></div>
+                                        <h4 class="shirt_text">Coooming Sooon 6</h4>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 0</span></p>
+                                        <div class="jewellery_img"><img src="images/ComingSoon.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -267,14 +257,14 @@
                 </div>
                 <div class="carousel-item">
                     <div class="container">
-                        <h1 class="fashion_taital">Jewellery Accessories</h1>
+                        <h1 class="fashion_taital">Everything</h1>
                         <div class="fashion_section_2">
                             <div class="row">
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Jumkas</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
-                                        <div class="jewellery_img"><img src="images/jhumka-img.png"></div>
+                                        <h4 class="shirt_text">Coooming Sooon 7</h4>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 0</span></p>
+                                        <div class="jewellery_img"><img src="images/ComingSoon.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -283,9 +273,9 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Necklaces</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
-                                        <div class="jewellery_img"><img src="images/neklesh-img.png"></div>
+                                        <h4 class="shirt_text">Coooming Sooon 8</h4>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 0</span></p>
+                                        <div class="jewellery_img"><img src="images/ComingSoon.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
@@ -294,9 +284,9 @@
                                 </div>
                                 <div class="col-lg-4 col-sm-4">
                                     <div class="box_main">
-                                        <h4 class="shirt_text">Kangans</h4>
-                                        <p class="price_text">Start Price <span style="color: #262626;">$ 100</span></p>
-                                        <div class="jewellery_img"><img src="images/kangan-img.png"></div>
+                                        <h4 class="shirt_text">Coooming Sooon 9</h4>
+                                        <p class="price_text">Start Price <span style="color: #262626;">₹ 0</span></p>
+                                        <div class="jewellery_img"><img src="images/ComingSoon.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
