--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <a href="index.html">Home</a>
                         <a href="fashion.html">Fashion</a>
                         <a href="electronic.html">Electronic</a>
-                        <a href="jewellery.html">Jewellery</a>
+                        <a href="Everything.html">Everything</a>
                     </div>
                     <span class="toggle_icon" onclick="openNav()"><img src="images/toggle-icon.png"></span>
                     <div class="dropdown">
