--- a/Everything.html
+++ b/Everything.html
@@ -10,7 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>Jewellery</title>
+    <title>Everything</title>
+    <link rel="shortcut icon" href="images/titleimg.png" type="image/x-icon" />
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
