--- a/electronic.html
+++ b/electronic.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
     <title>Electronic</title>
+    <link rel="shortcut icon" href="images/titleimg.png" type="image/x-icon" />
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
