--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                     <div class="box_main">
                                         <h4 class="shirt_text">Park Avenue Original Deodorant Set For Men 150ml Each (Combo Of 3)</h4>
                                         <p class="price_text">Price <span style="color: #262626;">₹ 399</span></p>
-                                        <div class="tshirt_img"><img src="images/PARKDEO.jpg"></div>
+                                        <div class="tshirt_img"><img src="images/PARKDEO.png"></div>
                                         <div class="btn_main">
                                             <div class="buy_bt"><a href="#">Buy Now</a></div>
                                             <div class="seemore_bt"><a href="#">See More</a></div>
